objects/project_cloud__Agenda_Item__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Action_Status__c</fullName>
        <formula>IF( 
ISBLANK(project_cloud__Last_Open_Action__c), 
&apos;Complete&apos;, 
IF(project_cloud__Last_Open_Action__c &gt; TODAY(), &apos;In Progress&apos;, &apos;Late&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Coaching_Notes__c</fullName>
        <inlineHelpText>This field allows users to add coaching notes to the agenda items.</inlineHelpText>
        <label>Coaching Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>project_cloud__Internal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true, this Agenda Item is not visible to external users.</inlineHelpText>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Last_Open_Action__c</fullName>
        <label>Last Open Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Meeting__c</fullName>
        <inlineHelpText>The parent Meeting of the Agenda Item</inlineHelpText>
        <label>Meeting</label>
        <referenceTo>project_cloud__Meeting__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>Agenda_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Position__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Determines the Agenda Item order within the Meetings interface</inlineHelpText>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agenda Item</label>
    <nameField>
        <label>Agenda Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>